--- a/ProjectMAP/Views/MedicalImages/Details.cshtml
+++ b/ProjectMAP/Views/MedicalImages/Details.cshtml
@@ -26,20 +26,24 @@
             @Html.DisplayNameFor(model => model.Pacient)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Pacient.PacientID)
+            @Html.DisplayFor(model => model.Pacient.PacientName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Doctor)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Doctor.DoctorID)
+            @Html.DisplayFor(model => model.Doctor.DoctorName) 
+            <p>@Html.DisplayFor(model => model.Doctor.Description) </p>
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Diagnostic)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Diagnostic.DiagnosticID)
+            @Html.DisplayFor(model => model.Diagnostic.DiagnosticName)
+            <p>@Html.DisplayFor(model => model.Diagnostic.Description) </p>
         </dd>
+
+
     </dl>
 </div>
 <div>
